# ClipVault

./: .gitignore  COMPLIANCE_SUMMARY.md  Cargo.toml  LICENSE_COMPLIANCE.md  NOTICE  README.en-US.md  README.ja-JP.md  README.md  README.zh-TW.md  biome.json  check_key_format.md  get_logs.py  get_logs2.py  get_logs3.py  index.html  package.json  pnpm-lock.yaml  tauri-cross-platform-build-guide.md
.cargo/: config.toml
.github/: auto-fix.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix-on-failure.yml  beta_build.yml  pages.yml  release.yml
docs/: index.html
scripts/: analyze-gh-log.ps1  auto-fix.js  get-actions-log.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/plugins/image_hosting/: Cargo.toml  build.rs
src-tauri/src/plugins/image_hosting/permissions/: default.toml
src-tauri/src/plugins/image_hosting/src/: commands.rs  crypto.rs  lib.rs
src-tauri/src/plugins/image_hosting/src/providers/: aliyun.rs  aws.rs  github.rs  mod.rs  qiniu.rs  tencent.rs  upyun.rs
src-tauri/src/plugins/sync/: Cargo.toml  build.rs
src-tauri/src/plugins/sync/permissions/: default.toml
src-tauri/src/plugins/sync/src/: commands.rs  crypto.rs  lib.rs
src/constants/: index.ts
src/database/: image.ts  index.ts  tag.ts
src/hooks/: useClipboard.ts  useContextMenu.ts  useHistoryList.ts  useRegister.ts
src/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
src/plugins/: exclusion.ts  imageHosting.ts  sync.ts  window.ts
src/stores/: clipboard.ts  (+3 more)
(+46 files in other folders)
