[package]
name = "tauri-plugin-eco-sync"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-eco-sync"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
